# leitor

./: para_teste.md  pyproject.toml
.streamlit/: config.toml  secrets.toml.exemplo
ensi/: ensi_app.py  ensi_app_run.py  llm_prompts.py
ensi/utils/: menu_extractor.py
leitor/: leitor_app.py  leitor_app_run.py  leitor_pdf.ipynb  llm_prompts.py
leitor/assets/artigos/conversoes/: AI Hallucinations_A Misnomer Worth Clarifying.md
