[tool.poetry]
name = "leitor"
version = "0.1.0"
description = ""
authors = ["rodrigo.goncalves <ro.go.calves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
docling = "^2.4.0"
streamlit = "^1.40.0"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
