[tool.poetry]
name = "leitor"
version = "0.1.0"
description = ""
authors = ["rodrigo.goncalves <ro.go.calves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
streamlit = "^1.40.0"
ipykernel = "^6.29.5"
llama-index = "^0.11.22"
llama-index-core = "^0.11.22"
llama-index-readers-docling = "^0.2.1"
llama-index-node-parser-docling = "^0.2.0"
llama-index-readers-file = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
